github.com/Jesserc/w3

--- a/docs/pages/helper-abi.mdx
+++ b/docs/pages/helper-abi.mdx
@@ -2,13 +2,13 @@
 
 ABI bindings in `w3` are specified for individual functions using Solidity syntax and are usable for any contract that supports that function.
 
-**Example:** ABI binding for the ERC20 `balanceOf` function ([Playground](https://pkg.go.dev/github.com/lmittmann/w3#example-NewFunc-BalanceOf))
+**Example:** ABI binding for the ERC20 `balanceOf` function ([Playground](https://pkg.go.dev/github.com/Jesserc/w3#example-NewFunc-BalanceOf))
 
 ```go
 funcBalanceOf := w3.MustNewFunc("balanceOf(address)", "uint256")
 ```
 
-**Example:** ABI binding for the Uniswap v4 `swap` function ([Playground](https://pkg.go.dev/github.com/lmittmann/w3#example-NewFunc-UniswapV4Swap))
+**Example:** ABI binding for the Uniswap v4 `swap` function ([Playground](https://pkg.go.dev/github.com/Jesserc/w3#example-NewFunc-UniswapV4Swap))
 
 ```go
 funcSwap := w3.MustNewFunc(`swap(
@@ -18,8 +18,8 @@ funcSwap := w3.MustNewFunc(`swap(
 )`, "int256 delta")
 ```
 
-A [`Func`](https://pkg.go.dev/github.com/lmittmann/w3#Func) can be used to
+A [`Func`](https://pkg.go.dev/github.com/Jesserc/w3#Func) can be used to
 
-* encode arguments to the contracts input data ([`Func.EncodeArgs`](https://pkg.go.dev/github.com/lmittmann/w3#Func.EncodeArgs)),
-* decode arguments from the contracts input data ([`Func.DecodeArgs`](https://pkg.go.dev/github.com/lmittmann/w3#Func.DecodeArgs)), and
-* decode returns form the contracts output data ([`Func.DecodeReturns`](https://pkg.go.dev/github.com/lmittmann/w3#Func.DecodeReturns)).
+- encode arguments to the contracts input data ([`Func.EncodeArgs`](https://pkg.go.dev/github.com/Jesserc/w3#Func.EncodeArgs)),
+- decode arguments from the contracts input data ([`Func.DecodeArgs`](https://pkg.go.dev/github.com/Jesserc/w3#Func.DecodeArgs)), and
+- decode returns form the contracts output data ([`Func.DecodeReturns`](https://pkg.go.dev/github.com/Jesserc/w3#Func.DecodeReturns)).
