--- a/docs/pages/vm-overview.mdx
+++ b/docs/pages/vm-overview.mdx
@@ -1,8 +1,10 @@
 # VM
 
-<DocLink title="w3vm.VM" /> is a high-level EVM environment with a simple but powerful API to simulate EVM execution, test Smart Contracts, or trace transactions. It supports Mainnet state forking via RPC and state caching for faster testing.
+<DocLink title="w3vm.VM" /> is a high-level EVM environment with a simple but powerful
+API to simulate EVM execution, test Smart Contracts, or trace transactions. It supports
+Mainnet state forking via RPC and state caching for faster testing.
 
-**Example:** Simulate an Uniswap v3 swap ([Playground](https://pkg.go.dev/github.com/lmittmann/w3/w3vm#example-VM))
+**Example:** Simulate an Uniswap v3 swap ([Playground](https://pkg.go.dev/github.com/Jesserc/w3/w3vm#example-VM))
 
 ```go
 // 1. Create a VM that forks the Mainnet state from the latest block,
